Forgot to push my work to the repo

--- a/src/components/Deck/deck.css
+++ b/src/components/Deck/deck.css
@@ -1,20 +1,3 @@
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(2, 4rem);
-    grid-template-rows: 7rem 2rem 7rem;
-    gap: .5rem;
-    cursor: pointer;
-    justify-content: center;
-    padding-top: 1rem;
-}
-
 .deck {
     height: 100%;
     width: 100%;
@@ -22,61 +5,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     font-size: 3rem;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     color: white;
-    user-select: none;
-}
-
-.computer-deck {
-    background-color: green;
-}
-
-.player-deck {
-    background-color: blue;
-}
-
-.text {
-    grid-column: span 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .card {
     position: relative;
-    height: 100%;
-    width: 100%;
+    height: 4rem;
+    width: 2.5rem;
     border: 1px solid black;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 4rem;
+    font-size: 2rem;
 }
 
-.card.red {
+.red {
     color: red;
 }
 
-.card.black {
+.black {
     color: black;
-}
-
-.card::before,
-.card::after {
-    position: absolute;
-    content: attr(data-value);
-    font-size: 1rem;
-}
-
-.card::before {
-    top: .5rem;
-    left: .5rem
-}
-
-.card::after {
-    bottom: .5rem;
-    right: .5rem;
-    transform: rotate(180deg);
 }
